--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bytemonk",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://52.168.1.54:8080",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
